https://issues.jboss.org/browse/JBIDE-10113   big fix
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@36305 a97e2381-89e5-4abb-bab3-167db6db766c